# Aletheia-Lite

./: .gitignore  README.md  pyproject.toml
core/: __main__.py  audit.py  canonicalization.py  config.py  decisions.py  judge.py  logging.py  manifest.py  nitpicker.py  pipeline.py  rate_limit.py  receipts.py  sandbox.py  sanitize.py  scout.py  symbolic_narrowing.py  text_normalization.py  tpm.py  trifecta.py  types.py
dashboard/: server.py
detectors/: escalation_probe.py  safety_bounds.py  spectral_rigidity.py  swarm_detector.py
guards/: circuit_breaker.py  token_velocity.py  zero_standing_privileges.py
tests/: test_benign_corpus.py  test_stage1_primitives.py  test_stage2_detectors_guards.py  test_stage3_agents_pipeline.py  test_stage4_dashboard.py  test_stage5_end_to_end.py  test_stage6_swarm_wiring.py
